# inky-dash

./: .env.example  .gitignore  LICENSE  README.md  app.py  composer.py  config.py  conftest.py  mqtt_bridge.py  package.json  plugin_loader.py  push.py  pyproject.toml  renderer.py  requirements.txt  restart.py  restart_helper.py  scheduler.py
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  admin.py  auth.py  composer.py  ha_discovery.py  image_ops.py  mqtt_bridge.py  plugin_loader.py  push.py  quantizer.py  renderer.py  scheduler.py  themes.py
app/state/: __init__.py  app_settings.py  history.py  page_model.py  page_store.py  schedule_model.py  schedule_store.py  settings_store.py
docs/: architecture.md  v4-brief.md  v4-plugins.md
docs/wiki/: writing-a-plugin.md
plugins/air_quality/: client.css  client.js  plugin.json  server.py
plugins/aligner/: client.css  client.js  plugin.json  server.py
schema/: page.schema.json  plugin.schema.json
scripts/: install-service.sh  install.ps1  install.sh  run.ps1  run.sh
state/: env_file.py  history.py  pages.py  preferences.py  schedules.py  uploads.py  widget_settings.py
static/: composer.css  composer.js
templates/: _appearance.html  base.html  components_demo.html  compose.html  compose_image.html  composer.html  dashboards.html  editor.html  index.html  login.html  schedules.html  send.html  settings.html  setup.html  themes.html  widget_stress.html
tests/: _helpers.py  conftest.py  test_admin_api.py  test_admin_e2e.py  test_app_settings.py  test_auth.py  test_compose_attr_encoding.py  test_gallery_folders.py  test_ha_discovery.py  test_history.py  test_page_model.py  test_page_store.py  test_plugin_loader.py  test_preview_api.py  test_push_api.py  test_push_manager.py  test_quantizer.py  test_schedule_model.py  test_schedule_store.py  test_scheduler.py  test_schedules_api.py  test_send_api.py  test_settings_api.py  test_settings_store.py  test_smoke.py  test_theme_builder.py  test_theme_font_registry.py
tools/: gen-page-types.mjs  screenshot.py  stress_test.py
(+252 files in other folders)
