[project]
name = "inky-dash"
version = "1.5.0"
description = "Flask companion that composes dashboards in the browser, renders to PNG, pushes to a Pimoroni Inky Impression panel over MQTT."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dmellok" }]
dependencies = [
    "flask>=3.0",
    "pydantic>=2.6",
    "jsonschema>=4.20",
    "pillow>=10.0",
    "playwright>=1.50",
    "paho-mqtt>=2.0",
    "feedparser>=6.0",
    "coloraide>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Filled in at later milestones.
# render = ["playwright>=1.50"]
# push = ["paho-mqtt>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
pythonpath = ["."]
# importlib mode: each test_*.py is collected without requiring a unique
# top-level module name. Avoids the test_smoke.py collision across
# plugins/<id>/tests/.
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
    "slow: launches Chromium and/or hits the live_server fixture (>1 s per test)",
]
# Plugin smoke tests live under plugins/<id>/tests/. Default file/class/function
# discovery patterns find them.

# Default: relaxed checks on the whole app package.
# Strict checks are scoped to the four load-bearing modules called out in v4-brief §6
# via per-module overrides below; those overrides activate when the modules land.
[tool.mypy]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.state.*", "app.push", "app.plugin_loader", "app.renderer"]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
